--- a/web/templates/web/domains/case/import/nuclear_material/add_or_edit_goods.html
+++ b/web/templates/web/domains/case/import/nuclear_material/add_or_edit_goods.html
@@ -23,6 +23,7 @@
   {{ fields.field(form.goods_description) }}
   {{ fields.field(form.quantity_amount) }}
   {{ fields.field(form.quantity_unit) }}
+  {{ fields.field(form.unlimited_quantity) }}
 {% endblock form_content %}
 
 {% block task_actions %}
