--- a/web/templates/layout/public.html
+++ b/web/templates/layout/public.html
@@ -28,7 +28,7 @@
       All content is available under the <a href="http://www.nationalarchives.gov.uk/doc/open-government-licence/">Open Government Licence</a>
       , except where otherwise stated. <a href="{{ static('web/docs/PrivacyNotice.pdf') }}" class="pdf" target="_blank" rel="noopener noreferrer">Fair Processing Notice</a>
         <br><br>
-        <a href="{{ icms_url('cookie-consent') }}?referrer_url={{ request.path }}">Cookies</a>
+        <a href="{{ icms_url('cookie-consent') }}">Cookies</a>
         <a href="{{ icms_url('support:accessibility-statement') }}" target="_blank" rel="noopener noreferrer">Accessibility Statement</a>
     </div>
 </div>
