--- a/web/templates/web/support/partial/sidebar.html
+++ b/web/templates/web/support/partial/sidebar.html
@@ -14,6 +14,6 @@
       <a href="{{ static('web/docs/DIT-DBT-NameChangeNotification.pdf') }}" target="_blank" rel="noopener noreferrer">DIT to DBT Notification Document</a>
   </li>
   <li>
-    <a href="{{ icms_url('cookie-consent') }}?referrer_url={{ request.path }}">Cookies</a>
+    <a href="{{ icms_url('cookie-consent') }}">Cookies</a>
   </li>
 </ul>
