--- a/web/templates/ecil/cfs/schedule_create.html
+++ b/web/templates/ecil/cfs/schedule_create.html
@@ -3,10 +3,10 @@
 {% block ecil_content %}
   <h1 class="govuk-heading-l">Create a product schedule</h1>
   <p class="govuk-body">A product schedule contains all the information needed about the products you want to export.</p>
-  <p class="govuk-body">You can add products to a schedule one at a time or in bulk.</p>
+  <p class="govuk-body">You can add products to a schedule one at a time or upload a spreadsheet to add them in bulk.</p>
   <p class="govuk-body">Any products included in kits need to be listed individually.</p>
   <h2 class="govuk-heading-m">Before you start</h2>
-  <p class="govuk-body">Your answers must apply to every product on the schedule. You will need to create a new schedule if any product has different details.</p>
+  <p class="govuk-body">Your answers must apply to every product on the schedule. You will need to create a new schedule for any product or raw material that has different details.</p>
   <p class="govuk-body">You will need to know:</p>
   <ul class="govuk-list govuk-list--bullet">
     <li>product names spelled correctly</li>
