ECIL-684 Minor NMIL content changes

--- a/web/templates/web/domains/case/import/nuclear_material/add_document.html
+++ b/web/templates/web/domains/case/import/nuclear_material/add_document.html
@@ -23,7 +23,7 @@
       <br>Please provide all information and documents relevant to the consideration of your application, including, as a minimum:
       <ul>
         <li>You must upload your Nuclear Site Licence.</li>
-        <li>If you hold a Environmental Agency permit, please also upload this document.</li>
+        <li>If you hold an Environmental Agency permit, please also upload this document.</li>
       </ul>
       <br>Please note that you may need to respond to additional questions after your application is submitted.
     </div>
