ECIL-704 Update exporter country select views to work with latest design.

--- a/web/templates/ecil/cfs/schedule_legislation_add_another.html
+++ b/web/templates/ecil/cfs/schedule_legislation_add_another.html
@@ -2,7 +2,7 @@
 
 {% block ecil_content_before_form %}
   <h1 class="govuk-heading-l">
-    <span class="govuk-caption-l">Product schedule {{ schedule_number }}</span>You have added {{ legislation_count }} legislation
+    <span class="govuk-caption-l">Product schedule {{ schedule_number }}</span>{{ legislation_header }}
   </h1>
   {# TODO: Revisit in ECIL-715 Replace with a task list macro / serializer #}
   <dl class="govuk-summary-list no-value">
