ECIL-715 Add uktradeListWithActions macro and serializer.
Changes:
  - Add uktradeListWithActions macro.
  - Add ListWithActionsKwargs serializer.
  - Update ExportApplicationAddAnotherExportCountryFormView to use macro.
  - Update CFSScheduleAddAnotherLegislationFormView to use macro.

--- a/web/templates/ecil/base.html
+++ b/web/templates/ecil/base.html
@@ -9,6 +9,7 @@
 {% block head %}
   <link rel="stylesheet" href="{{ static("govuk-frontend.min.css") }}">
   <link rel="stylesheet" href="{{ static("css/accessible-autocomplete.min.css") }}">
+  <link rel="stylesheet" href="{{ static("css/uktrade-list-with-actions.css") }}">
 {% endblock %}
 
 {% block header %}
