--- a/web/templates/ecil/export_application/add_exporter_office.html
+++ b/web/templates/ecil/export_application/add_exporter_office.html
@@ -7,6 +7,6 @@
     {% call gds.govukFieldset(fieldset_kwargs) %}
       {{ form }}
     {% endcall %}
-    {{ gds.govukButton({ "text": submit_btn_label|default("Continue"), "type": "submit" }) }}
+    {{ gds.govukButton({ "text": submit_btn_label|default("Continue"), "type": "submit", "preventDoubleClick": True }) }}
   </form>
 {% endblock %}
