ECIL-750 Fix case history view not showing refused applications.
Changes:
  - Add missing import used when displaying refused reason.

--- a/web/templates/web/domains/case/import_licence_history.html
+++ b/web/templates/web/domains/case/import_licence_history.html
@@ -1,4 +1,6 @@
 {% extends base_template %}
+{% from "display/fields.html" import application_field %}
+
 {% block css %}
   <style>
       /* Override default margin that is applied to text-widget class. */
