--- a/web/templates/ecil/cfs/schedule_manufacturer_address.html
+++ b/web/templates/ecil/cfs/schedule_manufacturer_address.html
@@ -1,7 +1,6 @@
 {% extends "ecil/gds_form.html" %}
+{% from "ecil/cfs/macros.html" import product_schedule_h1 %}
 
 {% block ecil_content_before_form %}
-  <h1 class="govuk-heading-l">
-    <span class="govuk-caption-l">Product schedule {{ schedule_number }}</span>What is the manufacturer name and address? (Optional)
-  </h1>
+  {{ product_schedule_h1(schedule_number, "What is the manufacturer name and address? (Optional)") }}
 {% endblock %}
