--- a/web/templates/ecil/cfs/schedule_product_start.html
+++ b/web/templates/ecil/cfs/schedule_product_start.html
@@ -1,9 +1,8 @@
 {% extends "ecil/base.html" %}
+{% from "ecil/cfs/macros.html" import product_schedule_h1 %}
 
 {% block ecil_content %}
-  <h1 class="govuk-heading-l">
-    <span class="govuk-caption-l">Product schedule {{ schedule_number }}</span>Add product details
-  </h1>
+  {{ product_schedule_h1(schedule_number, "Add product details") }}
   <p class="govuk-body">Add details of the products you want to export. You can choose to add products one at a time or upload a spreadsheet to add them in bulk.</p>
   <p class="govuk-body">Your answers must apply to every product on the schedule. You will need to create a new schedule if any product has different details.</p>
   {{ gds.govukDetails(details_kwargs) }}
